# fs9721-utils

./: .coveragerc  .gitignore  .pylint  LICENSE.md  README.md  mkdocs.yml  parser.py  parser_test.py  pyproject.toml
.github/workflows/: pylint.yml  python.yml  release.yml
docs/: PROTOCOL.md  example_parser.c  index.md
docs/api/: reader.md
fs9721/: __init__.py  reading.py
fs9721_utils/: __init__.py  csv_logger.py  logger.py  parser.py  reading.py
test/: __init__.py  parser_test.py
tests/: __init__.py  cases.py  csv_test.py  parser_test.py
