[tool.poetry]
name = "fs9721-utils"
version = "0.0.1"
description = ""
authors = ["Fergus In London <fergus@fergus.london>"]
license = "bleak"

[tool.poetry.dependencies]
python = "^3.9"
bitstruct = "^8.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
