[tool.poetry]
name = "fs9721-utils"
version = "0.0.3"
description = "Python based utilities for interacting with digital multimeters that are built on the FS9721-LP3 chipset."
authors = ["Fergus In London <fergus@fergus.london>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bitstruct = "^8.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
coverage = "^6.3.1"
freezegun = "^1.1.0"
mkdocs = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'tests:run'
